# suep-toolkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: elect_course.py
suep_toolkit/: __init__.py  auth.py  course.py  ecard.py  electricity.py  estudent.py  pan.py  util.py
suep_toolkit/auth/: __init__.py  service.py
suep_toolkit/ehall/: __init__.py  ecard.py
suep_toolkit/login/: __init__.py  service.py
